--- a/frontend/package.json
+++ b/frontend/package.json
@@ -83,7 +83,7 @@
     "start-server-and-test": "^1.14.0",
     "storybook": "^v7.0.0-beta.43",
     "typescript": "~4.9.4",
-    "vercel": "29.0.0",
+    "vercel": "*",
     "vite": "^4.0.1",
     "vite-plugin-md": "^0.22.5",
     "vitest": "^0.27.0",
